--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,17 @@ PROXY_RETRY_MAX=3
 # 连续失败多少次标记节点不可用
 PROXY_FAIL_THRESHOLD=3
 
+# ========== 重试超时优化配置 ==========
+# 总超时时间（秒，0 表示关闭，推荐 25）
+RETRY_TOTAL_TIMEOUT_SEC=25
+
+# 每次尝试的超时时间（秒，逗号分隔，推荐 12,6,3）
+RETRY_PER_ATTEMPT_TIMEOUTS_SEC=12,6,3
+
+# 退避时间（毫秒，推荐 20-80）
+RETRY_BACKOFF_MIN_MS=20
+RETRY_BACKOFF_MAX_MS=80
+
 # 失败节点探活间隔（秒）
 PROXY_HEALTH_INTERVAL_SEC=30
 
