docs: 完善 .env.example 环境变量配置
- 新增健康检查并发控制配置（HEAD/API 和 CLI 分离）
- 新增预热并发配置
- 新增 HTTP 重试细节配置（递减超时策略）
- 新增传输层连接池调优参数
- 新增熔断保护配置
- 优化配置分组和注释说明
- 添加详细的使用说明

--- a/.env.example
+++ b/.env.example
@@ -1,71 +1,130 @@
+# ========== 基础配置 ==========
 # 代理监听地址
 LISTEN_ADDR=:8000
 
 # 默认上游（必填）
 UPSTREAM_BASE_URL=https://api.anthropic.com
-
 # 默认上游 API Key（可选，留空则不自动注入）
 UPSTREAM_API_KEY=sk-your-key-here
-
 # 默认节点名称
 UPSTREAM_NAME=default
+# 健康检查方式（cli|api|head|proxy，默认 cli）
+PROXY_HEALTH_CHECK_MODE=cli
 
+# ========== 多租户 / 安全 ==========
+# 管理员访问密钥（默认: admin）生产务必修改
+ADMIN_API_KEY=admin
+# 默认账号配置（仅首次初始化使用）
+DEFAULT_ACCOUNT_NAME=default
+# 默认代理 API Key（默认: default-proxy-key）生产务必修改
+DEFAULT_PROXY_API_KEY=default-proxy-key
+
+# ========== 上游 / CLI 凭证 ==========
+# Claude/Proxy 访问凭证（至少提供其一）
+ANTHROPIC_API_KEY=
+ANTHROPIC_AUTH_TOKEN=
+# 自定义上游基址（与上方保持一致即可）
+ANTHROPIC_BASE_URL=https://api.anthropic.com
+# 兼容 OpenAI SDK 的备用 Key（可选）
+OPENAI_API_KEY=
+# CLI 默认模型与预热模型
+MODEL=claude-sonnet-4-5-20250929
+WARMUP_MODEL=claude-haiku-4-5-20251001
+# 关闭 CLI 预热：1=跳过预热；0=启用（默认）
+NO_WARMUP=0
+# 是否使用精简系统提示：1=精简；0=完整（默认保持精简，可显式设为 0 关闭）
+MINIMAL_SYSTEM=1
+# 自定义用户哈希（不填则基于 Token 计算）
+USER_HASH=
+# 跳过工具 JSON（仅测试用；1=跳过）
+SKIP_TOOL_JSON=0
+
+# ========== 健康检查与预热 ==========
 # 非 200 自动重试次数
 PROXY_RETRY_MAX=3
-
 # 连续失败多少次标记节点不可用
 PROXY_FAIL_THRESHOLD=3
+# 失败节点探活间隔（秒）
+PROXY_HEALTH_INTERVAL_SEC=30
+# 全量健康检查间隔（优先使用 PROXY_HEALTH_CHECK_ALL_INTERVAL）
+PROXY_HEALTH_CHECK_ALL_INTERVAL=10m
+# 全量健康检查间隔（分钟；与上方二选一，留空则使用默认 10m）
+HEALTH_ALL_INTERVAL_MIN=10
+# 全量健康检查并发数（默认 2，HEAD/API 可用 1~4 由 normalize 保护）
+HEALTH_CHECK_CONCURRENCY=2
+# CLI 健康检查并发数（默认 1，CLI 进程 + 15s 超时，建议 1~2）
+HEALTH_CHECK_CONCURRENCY_CLI=1
+# 预热并发数（默认 1，最大 2，独立于全量健康检查）
+WARMUP_CONCURRENCY=1
+# 预热开关/尝试次数/单次超时（毫秒）/至少成功次数
+WARMUP_ENABLED=1
+WARMUP_ATTEMPTS=2
+WARMUP_TIMEOUT_MS=17000
+WARMUP_REQUIRED_SUCCESS=1
 
-# ========== 重试超时优化配置 ==========
+# ========== HTTP 重试细节 ==========
+# 最大重试次数（包含首次）
+RETRY_MAX_ATTEMPTS=3
+# 单次请求超时（秒，默认 30）
+RETRY_PER_REQUEST_TIMEOUT_SEC=30
 # 总超时时间（秒，0 表示关闭，推荐 25）
 RETRY_TOTAL_TIMEOUT_SEC=25
-
 # 每次尝试的超时时间（秒，逗号分隔，推荐 12,6,3）
 RETRY_PER_ATTEMPT_TIMEOUTS_SEC=12,6,3
-
 # 退避时间（毫秒，推荐 20-80）
 RETRY_BACKOFF_MIN_MS=20
 RETRY_BACKOFF_MAX_MS=80
+# 需要重试的 HTTP 状态码列表
+RETRY_ON_STATUS=502,503,504
 
-# 失败节点探活间隔（秒）
-PROXY_HEALTH_INTERVAL_SEC=30
+# ========== 传输层连接池 ==========
+# 以下均为 http.Transport 调优参数
+PROXY_TRANSPORT_MAX_IDLE_CONNS=200
+PROXY_TRANSPORT_MAX_IDLE_CONNS_PER_HOST=50
+PROXY_TRANSPORT_MAX_CONNS_PER_HOST=100
+PROXY_TRANSPORT_IDLE_CONN_TIMEOUT=90s
+PROXY_TRANSPORT_TLS_HANDSHAKE_TIMEOUT=10s
+PROXY_TRANSPORT_RESPONSE_HEADER_TIMEOUT=30s
+PROXY_TRANSPORT_EXPECT_CONTINUE_TIMEOUT=1s
+PROXY_TRANSPORT_DISABLE_COMPRESSION=false
+PROXY_TRANSPORT_FORCE_HTTP2=true
 
-# 全量健康检查并发数（默认 2，HEAD/API 可用 1~4 由 normalize 保护）
-HEALTH_CHECK_CONCURRENCY=2
+# ========== 熔断保护 ==========
+CB_ENABLED=1
+CB_WINDOW_SECONDS=60
+CB_FAILURE_RATE=0.5
+CB_CONSECUTIVE_FAILS=5
+CB_COOLDOWN_SECONDS=30
+CB_HALFOPEN_MAX_CALLS=3
 
-# CLI 健康检查并发数（默认 1，CLI 进程 + 15s 超时，建议 1~2）
-HEALTH_CHECK_CONCURRENCY_CLI=1
+# ========== 指标调度 ==========
+# 需启用持久化存储后生效
+METRICS_SCHEDULER_ENABLED=1
+METRICS_AGGREGATE_INTERVAL=1h
+METRICS_CLEANUP_INTERVAL=24h
 
-# 预热并发数（默认 1，最大 2，独立于全量健康检查）
-WARMUP_CONCURRENCY=1
-
-# 全量健康检查间隔（分钟，默认 10）
-HEALTH_ALL_INTERVAL_MIN=10
-
+# ========== 持久化 / MySQL ==========
 # MySQL DSN（启用持久化；docker-compose 已配示例）
 PROXY_MYSQL_DSN=qcc:example@tcp(localhost:3306)/qcc_proxy?parseTime=true
-
 # 宿主机暴露的 MySQL 端口（避免与本地已有实例冲突）
 MYSQL_PORT=3307
+# 连接池参数（秒）
+MYSQL_MAX_OPEN_CONNS=25
+MYSQL_MAX_IDLE_CONNS=10
+MYSQL_CONN_MAX_LIFETIME=300
+MYSQL_CONN_MAX_IDLE_TIME=180
 
+# ========== Cloudflare Tunnel（可选）==========
+CF_API_TOKEN=
+TUNNEL_SUBDOMAIN=
+TUNNEL_ZONE=
+TUNNEL_ENABLED=0
+
+# ========== 构建与缓存 ==========
 # Go 构建缓存目录（避免权限问题，可按需修改）
 GOCACHE=.gocache
 
-# ========== 多租户配置（默认启用）==========
-
-# 管理员访问密钥（默认: admin）
-# 警告：生产环境必须修改此默认值！
-ADMIN_API_KEY=admin
-
-# 默认账号配置
-DEFAULT_ACCOUNT_NAME=default
-
-# 默认代理 API Key（默认: default-proxy-key）
-# 警告：生产环境必须修改此默认值！
-DEFAULT_PROXY_API_KEY=default-proxy-key
-
 # ========== 使用说明 ==========
-
 # - 系统默认启用多租户，无需额外开关。
 # - 首次启动后请立即修改 ADMIN_API_KEY 与 DEFAULT_PROXY_API_KEY。
 # - 管理界面：http://localhost:8000/admin?admin_key=${ADMIN_API_KEY}
