chore(test): relax health checks and update doc

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -41,45 +41,45 @@ services:
       DEFAULT_PROXY_API_KEY: default-proxy-key
 
       # ========== 健康检查与预热 ==========
-      PROXY_RETRY_MAX: 3
-      PROXY_FAIL_THRESHOLD: 3
-      PROXY_HEALTH_INTERVAL_SEC: 30
-      HEALTH_ALL_INTERVAL_MIN: 10
+      PROXY_RETRY_MAX: 4                 # 额外一次重试，减少短暂抖动导致的失败
+      PROXY_FAIL_THRESHOLD: 5            # 连续 5 次失败才判定节点失败，更容错
+      PROXY_HEALTH_INTERVAL_SEC: 45      # 探活频率放缓，避免瞬时波动
+      HEALTH_ALL_INTERVAL_MIN: 15        # 全量探活间隔拉长，降低误报
       HEALTH_CHECK_CONCURRENCY: 2
       HEALTH_CHECK_CONCURRENCY_CLI: 1
       WARMUP_CONCURRENCY: 1
       WARMUP_ENABLED: 0
-      WARMUP_ATTEMPTS: 1
-      WARMUP_TIMEOUT_MS: 10000
+      WARMUP_ATTEMPTS: 2
+      WARMUP_TIMEOUT_MS: 12000
       WARMUP_REQUIRED_SUCCESS: 1
 
       # ========== HTTP 重试细节 ==========
-      RETRY_MAX_ATTEMPTS: 3
-      RETRY_PER_REQUEST_TIMEOUT_SEC: 15
-      RETRY_TOTAL_TIMEOUT_SEC: 25
-      RETRY_PER_ATTEMPT_TIMEOUTS_SEC: 12,6,3
-      RETRY_BACKOFF_MIN_MS: 100
-      RETRY_BACKOFF_MAX_MS: 500
-      RETRY_ON_STATUS: 502,503,504
+      RETRY_MAX_ATTEMPTS: 4              # 与 PROXY_RETRY_MAX 对齐
+      RETRY_PER_REQUEST_TIMEOUT_SEC: 20  # 单次尝试更宽裕
+      RETRY_TOTAL_TIMEOUT_SEC: 40        # 总超时同步放宽
+      RETRY_PER_ATTEMPT_TIMEOUTS_SEC: 18,12,6,3
+      RETRY_BACKOFF_MIN_MS: 200
+      RETRY_BACKOFF_MAX_MS: 1500
+      RETRY_ON_STATUS: 408,429,502,503,504
 
       # ========== 传输层连接池 ==========
       PROXY_TRANSPORT_MAX_IDLE_CONNS: 200
       PROXY_TRANSPORT_MAX_IDLE_CONNS_PER_HOST: 50
       PROXY_TRANSPORT_MAX_CONNS_PER_HOST: 100
       PROXY_TRANSPORT_IDLE_CONN_TIMEOUT: 90s
-      PROXY_TRANSPORT_TLS_HANDSHAKE_TIMEOUT: 10s
-      PROXY_TRANSPORT_RESPONSE_HEADER_TIMEOUT: 30s
+      PROXY_TRANSPORT_TLS_HANDSHAKE_TIMEOUT: 15s
+      PROXY_TRANSPORT_RESPONSE_HEADER_TIMEOUT: 45s
       PROXY_TRANSPORT_EXPECT_CONTINUE_TIMEOUT: 1s
       PROXY_TRANSPORT_DISABLE_COMPRESSION: false
       PROXY_TRANSPORT_FORCE_HTTP2: true
 
       # ========== 熔断保护 ==========
       CB_ENABLED: 1
-      CB_WINDOW_SECONDS: 120
-      CB_FAILURE_RATE: 0.8
-      CB_CONSECUTIVE_FAILS: 10
-      CB_COOLDOWN_SECONDS: 60
-      CB_HALFOPEN_MAX_CALLS: 5
+      CB_WINDOW_SECONDS: 180            # 统计窗口更长，避免短时抖动触发
+      CB_FAILURE_RATE: 0.9              # 允许更高失败率再熔断
+      CB_CONSECUTIVE_FAILS: 15          # 连续失败阈值抬高
+      CB_COOLDOWN_SECONDS: 90           # 冷却期略延长，保护恢复过程
+      CB_HALFOPEN_MAX_CALLS: 8          # 半开探测多几次，减少误判
 
       # ========== 指标调度 ==========
       METRICS_SCHEDULER_ENABLED: 1
